<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="820px"
    android:layout_height="360px"
    android:background="@drawable/comm_c2d3540_bg">

    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70px"
        android:gravity="center"
        android:text="@string/driver_is_input"
        android:textColor="@color/hvac_title_color"
        android:textFontWeight="400"
        android:textSize="36px" />

    <TextView
        android:id="@+id/tv_input"
        android:layout_width="350px"
        android:layout_height="80px"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="40px"
        android:layout_marginBottom="40px"
        android:background="@drawable/comm_c4972b8_bg"
        android:gravity="center"
        android:text="@string/sure"
        android:textColor="@color/hvac_white"
        android:textFontWeight="400"
        android:textSize="40px" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="350px"
        android:layout_height="80px"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="40px"
        android:layout_marginBottom="40px"
        android:background="@drawable/seat_button_white65_bg"
        android:gravity="center"
        android:text="@string/cancel_text"
        android:textColor="@color/hvac_title_color"
        android:textFontWeight="400"
        android:textSize="40px" />

</RelativeLayout>